samples/_failures_safe/1761475382_0daed1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_974ff586.c: In function ‘main’:
./samples/SAFE/__tmp_974ff586.c:139:9: error: expected expression at end of input
  139 |         if (multiply_matrices(&matA, &matB, &result))
      |         ^~
./samples/SAFE/__tmp_974ff586.c:139:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_974ff586.c:139:9: error: expected declaration or statement at end of input
